--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.2.0",
     "react-is": "^19.2.3",
     "react-router-dom": "^7.10.1",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.5.1",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.4.0"
